Роутинг методов переделан под RESTful Добавлено интеграционное тестирование для транспорта
